--- a/templates/accounts/update-user.html
+++ b/templates/accounts/update-user.html
@@ -18,16 +18,18 @@
         </div>
       </div>
       <div class="layout__body">
-        <form class="form" action="" method="POST" enctype="multipart/form-data">
+        <form class="form" enctype="multipart/form-data" method="POST">
           {% csrf_token %}
 
-          {% for field in form %}
-          <div class="form__group">
-            <label for="profile_pic">{{field.label}}</label>
-            {{field}}
+          <div class="form-group">
+            <label for="bio">Bio</label>
+            <input type="text" name="bio" class="form-control" required>
           </div>
-          {% endfor %}
 
+          <div class="form-group">
+            <label for="avatar">Avatar</label>
+            <input type="file" name="avatar" class="form-control">
+          </div>
 
           <div class="form__action">
             <a class="btn btn--dark" href="index.html">Cancel</a>
