bio and avatar update

--- a/templates/accounts/update-user.html
+++ b/templates/accounts/update-user.html
@@ -23,7 +23,7 @@
 
           <div class="form-group">
             <label for="bio">Bio</label>
-            <input type="text" name="bio" class="form-control" required>
+            <input type="text" name="bio" class="form-control" placeholder="{{old_bio}}" required>
           </div>
 
           <div class="form-group">
