--- a/templates/rooms/room.html
+++ b/templates/rooms/room.html
@@ -40,7 +40,7 @@
           </a>
           <a href="{% url 'delete-room' room.id %}">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-              <title>remove</title>
+              <title>removerr</title>
               <path
                 d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z">
               </path>
