--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -22,13 +22,12 @@
             <!-- Logged In -->
             {% if request.user.is_authenticated %}
             <div class="header__user">
-                <a href="{% url 'account_logout'%}">
+                <a href="{%url 'user-profile' request.user.id%}">
                     <div class="avatar avatar--medium active">
                         <img src="{{request.user.userprofile.avatar.url}}" />
                     </div>
                     <p>{{request.user.username}} <span>@{{request.user.username}}</span></p>
                 </a>
-                <a href="{%url 'user-profile' request.user.id%}">user-profile</a>
                 <button class="dropdown-button">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                         <title>chevron-down</title>
